--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   emoji_picker_flutter: ^4.3.0
   firebase_messaging: ^16.0.1
   
+  provider: ^6.1.5+1
   get: ^4.6.7
   flutter_svg: ^2.2.1
   dotted_border:
@@ -67,6 +68,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  firebase_auth_mocks: ^0.15.0
+  fake_cloud_firestore: ^4.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -74,6 +78,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  mockito: ^5.5.1
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
